--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "private": true,
   "dependencies": {
     "gulp-autoprefixer": "^3.1.0",
-    "npm": "^6.0.0"
+    "hoek": "^5.0.3",
+    "npm": "^6.1.0"
   }
 }
