--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-update": "0.0.2",
     "hoek": "^5.0.3",
+    "lodash": "^4.17.11",
     "natives": "^1.1.4",
     "npm": "^6.4.1"
   }
